--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,13 @@
             <artifactId>lambda</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Misc Dependencies -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.32</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
